syntax="proto3";
package user;
option go_package = "github.com/pkusunjy/openai-grpc-server/user";

message ChargeRecord {
    double amount = 1;
    uint64 timestamp = 2;
};

message User {
    uint64 uid = 1;
    string nickname = 2;
    string phone = 3;
    string email = 4;
    bool is_vip = 5;
    uint64 vip_expiration_timestamp = 6;
    repeated ChargeRecord charge_records = 7;
    bool is_deleted = 8;
    bool is_forbidden = 9;
};

message UserRequest {
    repeated uint64 uid = 1;
    repeated string phone = 2;
};

message UserResponse {
    uint32 err_no = 1;
    string err_msg = 2;
    repeated User users = 3;
};

service UserService {
    rpc get_user_by_id (UserRequest) returns (UserResponse) {}
    rpc get_user_by_id_range (UserRequest) returns (UserResponse) {}
    rpc get_user_by_phone (UserRequest) returns (UserResponse) {}
};

